--- a/server/app/views/planning/termly/termlyPlansHome.scala.html
+++ b/server/app/views/planning/termly/termlyPlansHome.scala.html
@@ -3,7 +3,7 @@
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, teacherSchoolToClasses: Map[String, List[duplicate.model.ClassDetails]], classIdToOverallProgress: Map[ClassId, Int])
 
 @timetoteachAppMain(handler, s"Termly Plans",
-    userPictureUri, userFirstName, userFamilyName, None, None) {
+    userPictureUri, userFirstName, userFamilyName, None, None, None) {
 
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
