--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -216,3 +216,8 @@ input#classLevelInputCurriculumArea {
 #generating-pdf {
     display: none;
 }
+
+.curriculum-area-button {
+    width: 7rem;
+    font-size: smaller;
+}
