--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -188,7 +188,7 @@
 
                 @if(maybeCurrentTermlyCurriculumSelection.isDefined) {
                     <nav id="dashboard-nav-3" class="navbar navbar-primary bg-dark navbar-expand-lg">
-                        <div class="col-lg-2">
+                        <div class="col-md-1 col-xl-2">
                             <a class="navbar-brand text-light" href="#">Curriculum Areas</a>
                         </div>
 
